# Restaurant1

./: README.md  pyproject.toml
.github/workflows/: ci.yml
restaurant1/: hooks.py  modules.txt
restaurant1/Services/: rest.py
restaurant1/restaurant1/doctype/menu_item/: menu_item.js  menu_item.json  menu_item.py  test_menu_item.py
restaurant1/restaurant1/doctype/order/: order.js  order.json  order.py  test_order.py
restaurant1/restaurant1/doctype/order_history/: order_history.json  order_history.py
restaurant1/restaurant1/doctype/order_item/: order_item.js  order_item.json  order_item.py  test_order_item.py
restaurant1/restaurant1/doctype/reservation/: reservation.js  reservation.json  reservation.py  test_reservation.py
restaurant1/restaurant1/doctype/table/: table.js  table.json  table.py  test_table.py
restaurant1/restaurant1/doctype/table_group/: table_group.js  table_group.json  table_group.py  test_table_group.py
restaurant1/restaurant1/doctype/table_group_item/: table_group_item.json  table_group_item.py
restaurant1/restaurant1/report/: menu_item_report.py  order_report.py
